# Pexahod

./: .gitignore  .gitmodules  README.md
3D - V2/BODY/BLACK/: Body - Bottom.stl  Body - BottomCover.stl  Body - MiddleSupport.stl
3D - V2/BODY/GREEN/: Body - Middle.stl
3D - V2/LEG/BLACK/: Coxa Left - BearingHolder.stl  Coxa Left - HornHolder.stl  Coxa Left - Middle.stl  Femur Left - Bottom.stl  Tibia Left - MiddleMiddle.stl  Tibia Left - MiddleSpacer.stl
3D - V2/LEG/GREEN/: Coxa Left - ServoBearingHolder.stl  Coxa Left - Top.stl  Femur Left - ServoBearingHolder3.stl  Tibia Left - BottomTop.stl  Tibia Left - EndBottom.stl  Tibia Left - TopBottom.stl  Tibia Left - TopTop.stl
3D - V2/LEG/LEFT/BLACK/: Femur Left - Top.stl  Left Black.3mf  Tibia Left - EndTop.stl  Tibia Left - MiddleTop.stl
3D - V2/LEG/LEFT/GREEN/: Body - ServoBearingHolder.stl  Coxa Left - Bottom.stl  Coxa Left - ServoBearingHolder2.stl  Coxa Left - Tensioner.stl  Femur Left - Middle.stl  LeftLegGreen.3mf  Tibia Left - BottomBottom.stl  Tibia Left - Tensioner.stl
3D - V2/LEG/RIGHT/BLACK/: Coxa Right - BearingHolder.stl  Coxa Right - HornHolder.stl  Coxa Right - Middle.stl  Femur Right - Bottom.stl  Femur Right - Top.stl  Right Leg.3mf  Tibia Right - EndTop.stl  Tibia Right - MiddleBottom.stl  Tibia Right - MiddleMiddle.stl  Tibia Right - MiddleSpacer.stl  Tibia Right - MiddleTop.stl
3D - V2/LEG/RIGHT/GREEN/: Coxa Right - Bottom.stl  Coxa Right - ServoBearingHolder.stl  Coxa Right - Tensioner.stl  Coxa Right - Top.stl  Femur Right - Middle.stl  Right Leg.3mf  Tibia Right - BottomBottom.stl  Tibia Right - BottomTop.stl  Tibia Right - EndBottom.stl  Tibia Right - TopBottom.stl  Tibia Right - TopTop.stl
3D/BODY/: BearingHolder.stl  BottomCover.stl  BottomCoverCutout.stl  BottomV2.stl  CameraHolder.stl  MiddleSupport.stl  MiddleV2.stl
3D/LEFT/: LeftLegBlack.stl  LeftLegGreen.stl
3D/LEFT/COXA/: BearingHolder.stl  HornHolder.stl  PotHolder.stl  SideBottom.stl  SideMiddle.stl  SideTop.stl
3D/LEFT/FEMUR/: SideBottom.stl  SideMiddle.stl  SideTop.stl
3D/LEFT/TIBIA/: BottomBottom.stl  BottomTop.stl  MiddleBottom.stl  MiddleSpacer.stl  MiddleTop.stl  TibiaEndBottom.stl  TibiaEndTop.stl  TopBottom.stl  TopMiddle.stl  TopTop.stl
3D/RIGHT/: RightLegBlack.stl  RightLegGreen.stl
3D/RIGHT/COXA/: BearingHolder.stl  HornHolder.stl  PotHolder.stl  SideBottom.stl  SideMiddle.stl  SideTop.stl
3D/RIGHT/FEMUR/: SideBottom.stl  SideMiddle.stl  SideTop.stl
3D/RIGHT/TIBIA/: BottomBottom.stl  BottomTop.stl  MiddleBottom.stl  MiddleSpacer.stl  MiddleTop.stl  TibiaEndBottom.stl  TibiaEndTop.stl  TopBottom.stl  TopMiddle.stl  TopTop.stl
Firmware/: CMakeLists.txt  FreeRTOSConfig.h
Firmware/src/: bezier.cpp  bezier.h  calibration.cpp  calibration.h  command_handler.cpp  command_handler.h  command_message.cpp  command_message.h  errors.h  gait.cpp  gait.hpp  global.cpp  global.hpp  led.cpp  led.h  leg.cpp  leg.hpp  main.cpp  mcu.cpp  mcu.h  mode_handler.cpp  mode_handler.h  nrf.cpp  nrf.h  nrf_msg.cpp  nrf_msg.h  pins.h  queues.cpp  queues.h  robot.cpp  robot.h  robot.hpp  robot_controller.cpp  robot_controller.h  robot_controller.hpp  rx_test.py  sensors.cpp  sensors.h  servos.cpp  servos.h  (+8 more)
Firmware/tests/: usb_controller_test.py
uROSws/src/Pexahod/: CMakeLists.txt
uROSws/src/Pexahod/src/: errors.h  leg.cpp  leg.hpp  main.cpp  sensors.cpp  sensors.h  servos.cpp  servos.h
uROSws/src/micro-pexahod/: CMakeLists.txt
uROSws/src/micro-pexahod/src/: main.c  main.cpp
uROSws/src/test/src/: blink-main.c.template  main.cpp
